fix navbar - give red background on collapse to improve readability

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -187,6 +187,12 @@ main {
     box-sizing: border-box;
 }
 
+.navbar-collapse {
+    /* Navbar collapse on red background to improve readability */
+    background-color: var(--primary-color);
+    padding: 1rem;
+}
+
 /*Hero Section*/
 #hero-section {
     background-color: var(--secondary-color);
